--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
     <!-- Description -->
-    <title>_blank</title>
-    <meta name="description" content="_blank description">
+    <title>ohwa-build</title>
+    <meta name="description" content="ohwa-build description">
     
     <!-- Root -->
     <base href="/">
@@ -28,7 +28,7 @@
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="_Blank App">
+    <meta name="apple-mobile-web-app-title" content="ohwa-build">
     
     <!-- Homescreen icons -->
     <link rel="apple-touch-icon" href="images/manifest/icon-48x48.png">
@@ -60,7 +60,7 @@
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
     <!-- App Element -->
-    <link rel="import" href="/src/my-app/my-app.html">
+    <link rel="import" href="/src/ohwa-app/ohwa-app.html">
 
     <style>
       body {
@@ -71,7 +71,7 @@
     </style>
   </head>
   <body>
-    <my-app></my-app>
+    <ohwa-app></ohwa-app>
     <noscript>
       Enable JavaScript to view this site.
     </noscript>
