--- a/src/ohwa-app/ohwa-app.html
+++ b/src/ohwa-app/ohwa-app.html
@@ -8,6 +8,7 @@ Main app element/container
 <link rel="import" href="../../bower_components/app-route/app-route.html">
 <link rel="import" href="../../bower_components/app-route/app-location.html">
 <!-- Custom dependencies -->
+<link rel="import" href="../ohwa-element/ohwa-element.html">
 <link rel="import" href="../icons.html">
 
 <dom-module id="ohwa-app">
@@ -42,6 +43,7 @@ Main app element/container
       </iron-pages>
 
       <h2>[[prop1]]</h2>
+      <ohwa-element></ohwa-element>
   </template>
 
   <script>
