--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
     <!-- App Container -->
     <link rel="import" href="/src/ohwa-app/ohwa-app.html">
 
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Zilla+Slab" rel="stylesheet">
+
     <style>
       body {
         line-height: 1.5;
